# OtoDecks

./: CMakeLists.txt  OtoDecks.jucer  OtoDecks1.jucer  README.md
Source/: AudioRecorder.h  CSVOperator.cpp  CSVOperator.h  DJAudioPlayer.cpp  DJAudioPlayer.h  DeckGUI.cpp  DeckGUI.h  LookAndFeel.cpp  LookAndFeel.h  Main.cpp  MainComponent.cpp  MainComponent.h  MemoryAudioSource.h  PlaylistComponent.cpp  PlaylistComponent.h  RecordToggleSwitch.h  TrackListComponent.cpp  TrackListComponent.h  WaveformDisplay.cpp  WaveformDisplay.h
scripts/: analyze_track.py
